# mail_management

./: .env.example  .gitignore  README.md  pyproject.toml
config/: __init__.py  settings.py
reports/: coverage-comparison.html  dashboard.html  index.html  insights.html  mbox-dashboard.html
src/galaxy_mail_analyzer/: __init__.py  cli.py
src/galaxy_mail_analyzer/analysis/: __init__.py  claude.py  clustering.py  embeddings.py
src/galaxy_mail_analyzer/config/: settings.py
src/galaxy_mail_analyzer/ingestion/: __init__.py  hyperkitty.py  mbox_parser.py
src/galaxy_mail_analyzer/knowledge_base/: __init__.py  discourse.py  indexer.py
src/galaxy_mail_analyzer/reporting/: __init__.py  generators.py
src/galaxy_mail_analyzer/storage/: __init__.py  database.py  models.py  vector_store.py
tests/: __init__.py
